--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="box">
-		<fieldset>
+	<div >
+		<fieldset class="box">
 		<p class="content">This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
 	    </fieldset>
 	</div>
