--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div >
-		<fieldset class="box">
+	<div class="box">
+		
 		<p class="content">This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
-	    </fieldset>
+	   
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
